--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
+  <!--Font Awesome CDN Link-->
+  <link rel="stylesheet" href="<link rel=" stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="sytless/style.css">
 </head>
 
 <body>
   <header>
+    <h3 class="logo">Ma<span>r</span>y</h3>
+    <nav class="navlist">
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Porfolio</a></li>
+        <li><a href="">Contact Us</a></li>
+      </ul>
+      <a href=""><button class="btn">Hire Me</button></a>
+    </nav>
 
   </header>
   <main>
