added new update hero bannar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,31 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+      <h3 class="logo">Ma<span>r</span>y</h3>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Porfolio</a></li>
+        <li><a href="">Contact Us</a></li>
+        <a href=""><button class="btn-1">Hire Me</button></a>
+      </ul>
+    </nav>
+    <div class="hero-banner">
+      <div class="hero-content">
+        <h4 class="hero-subtitle">Hi, I am</h4>
+        <h1 class="hero-title">Mary Hardy</h1>
+        <p class="hero-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+          because as to society behaved moments.</p>
+        <a href=""><button class="btn-1">Download CV</button></a>
+        <a href=""><button class="btn-2">Contact us</button></a>
+      </div>
+      <div class="hero-img"><img src="images/hardy.png" alt=""></div>
+    </div>
 
+  </header>
 </body>
 
 </html>
