--- a/index.html
+++ b/index.html
@@ -41,6 +41,37 @@
     </div>
 
   </header>
+
+
+  <section class="maine">
+    <section class="about">
+      <h3 class="about-title">About Me</h3>
+      <p class="about-description">I, m a designer & developer with a passion for web design. I enjoy developing
+        simple, clean and slick websites that
+        provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with
+        me.
+        Delivering work within time and budget which meets clients requirements in our mata.</p>
+      <div class="about-items">
+        <div class="about-item">
+          <p class="item-title">Name:</p>
+          <p class="item-description">Mary Hardy</p>
+        </div>
+        <div class="about-item">
+          <p class="item-title">Email:</p>
+          <p class="item-description">info@gmail.com</p>
+        </div>
+        <div class="about-item">
+          <p class="item-title">Date of birth:</p>
+          <p class="item-description">11 November 1987</p>
+        </div>
+        <div class="about-item">
+          <p class="item-title">From:</p>
+          <p class="item-description">
+            Los Angeles, USA</p>
+        </div>
+      </div>
+    </section>
+  </section>
 </body>
 
 </html>
